--- a/teacher-personal-center/question-response.html
+++ b/teacher-personal-center/question-response.html
@@ -154,7 +154,7 @@
 								2017-10-11 12：20
 								<span class="red" style="margin-left: 30px;">悬赏<b class="reward_price">100</b>金币</span>
 							</p>
-						</div
+						</div>
 					</div>
 					<div class="reward_middel">
 						<span class="write_back">已回复</span>
